Changelog
=========

7.5-dev - (unreleased)
----------------------

7.4 - (2014-01-23)
------------------
* Change: Rerelease broken egg
  [ghicaale refs #17959]

7.3 - (2014-01-22)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Change: Update Advanced settings button labels
  [avoinea]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

7.2 - (2013-09-06)
------------------
* Feature: Added possibility to configure pagination for tabular view
  [szabozo0 refs #15669]

7.1 - (2013-03-15)
------------------
* Feature: Update Simile Exhibit 2.2 Map Extenstion to use Google Maps v3
  [voineali refs #14106]
* Bug fix: Force Simile Exhibit 2.2 if browser is Internet Explorer as
  Simile Exhibit 3.0 is not stable for IE
  [voineali refs #14106]
* Feature: Added Simile Exhibit section within Daviz Visualization Control Panel
  and allow Plone admins to select which version of Simile Exhibit
  to use (2.2.0 or 3.0.0. Default 3.0.0)
  [voineali refs #14106]
* Change: Moved eea.exhibit specific code from eea.app.visualization to this
  package and load exhibit API only if there is at least one Exhibit
  Visualization enabled
  [voineali refs #14003]
* Feature: added information for contributors
  [ciobabog refs #13892]
* Feature: Added more exhibit facets (Alphabetical Range, Cloud, Hierarhical,
  Numeric Range and Text Search)
  [voineali refs #10007]

7.0 - (2013-02-25)
------------------
* Bug fix: Center timeline to current date
  [voineali refs #10176]
* Feature: Upgraded to Simile Exhibit 3.0
  [voineali refs #13807]

6.2 - (2013-01-10)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
* Change: Fix tabular view to get column labels from FacetsVocabulary and not
  directly from annotations
  [voineali refs #9558]
* Feature: Possibility to customize Exhibit visualizations title