@@ -368,7 +368,7 @@ Exhibit.Database._Impl.prototype.addListener=function(A){this._listeners.add(A);
 };
 Exhibit.Database._Impl.prototype.removeListener=function(A){this._listeners.remove(A);
 };
-Exhibit.Database._Impl.prototype.loadDataLinks=function(B){var A=SimileAjax.jQuery("head > link[rel=exhibit/data]").get();
+Exhibit.Database._Impl.prototype.loadDataLinks=function(B){var A=SimileAjax.jQuery("head > link[rel='exhibit/data']").get();
 this._loadLinks(A,this,B);
 };
 Exhibit.Database._Impl.prototype.loadSubmissionLinks=function(C){var B=this;
@@ -387,7 +387,7 @@ if(!H.type){H.type=B.getObject(I,"type");
 B.loadItems(E.items,F);
 B._listeners.fire("onAfterLoadingItems",[]);
 }}};
-var A=SimileAjax.jQuery("head > link[rel=exhibit/submissions]").get();
+var A=SimileAjax.jQuery("head > link[rel='exhibit/submissions']").get();
 this._loadLinks(A,D,C);
 };
 Exhibit.Database._Impl.prototype._loadLinks=function(A,C,B){A=[].concat(A);
