@@ -134,7 +134,7 @@ Exhibit.Database._Impl.prototype.removeListener = function(listener) {
 };
 
 Exhibit.Database._Impl.prototype.loadDataLinks = function(fDone) {
-    var links = SimileAjax.jQuery('head > link[rel=exhibit/data]').get()
+    var links = SimileAjax.jQuery('head > link[rel="exhibit/data"]').get()
     this._loadLinks(links, this, fDone);
 };
 
@@ -175,7 +175,7 @@ Exhibit.Database._Impl.prototype.loadSubmissionLinks = function(fDone) {
         
     };
     
-    var links = SimileAjax.jQuery('head > link[rel=exhibit/submissions]').get()
+    var links = SimileAjax.jQuery('head > link[rel="exhibit/submissions"]').get()
     this._loadLinks(links, dbProxy, fDone);
 };
 
